about section > moved call to action to the bottom. fixed jordan background image alignment

--- a/themes/vireo/sass/theme/_about.scss
+++ b/themes/vireo/sass/theme/_about.scss
@@ -76,9 +76,9 @@
 }
 
 .ashleigh-image {
-  background: url('./images/ash.jpg') no-repeat;
+  background: url('./images/ash.jpg') no-repeat top left;
 }
 
 .jordan-image {
-  background: url('./images/jordan.jpg') no-repeat;
+  background: url('./images/jordan.jpg') no-repeat top right;
 }
